--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: cksspk/hello-world-docker-action@v2
+        uses: cksspk/hello-world-docker-action@main
         with:
           who-to-greet: 'cksspk'
       # Use the output from the `hello` step
